2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/data/tips.xml.in: Remove extra quotes.

2006-10-28  Don Allingham  <don@gramps-project.org>
	* src/plugins/FamilyGroup.py: fix typo

2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/data/tips.xml.in: Replace -> with > 
	* help/ru/ro.po: Add po file, to start translating the manual.

2006-10-27  Don Allingham  <don@gramps-project.org>
	* src/plugins/FamilyGroup.py: don't translation paragraph name
	* src/GrampsCfg.py: remove unused online maps string
	* src/Editors/_EditRepoRef.py: fixed transation strings
	* src/Editors/_EditName.py: fixed transation strings
	* src/Editors/_EditChildRef.py: fixed transation strings
	* src/ScratchPad.py: fixed transation strings
	* help/C/gramps.xml: update
	* help/C/figures/prefs.png: update
	* help/C/figures/select-person.py: update

2006-10-27  Morten Bo Johansen  <mbj@spamcop.net>
	* src/data/tips.xml.in: Update tips.
	* src/plugins/rel_da.py: Update.

2006-10-27  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_RelationshipPathBetweenBookmarks.py
	(name): Correct the string.
	* src/data/tips.xml.in: Update bug tracker address.
	* src/const.py.in: Put gettext import back.

2006-10-26  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.about): Translate comments.
	* src/const.py.in: No gettext (won't work anyway because const.py
	is imported before textdomain is set.
	* NEWS: Update.
	* help/gramps.pot: Regenerate manual template.
	* src/data/tips.xml.in (family): Escape quotes.
	* src/TipOfDay.py (TipParserescape): Remove: no need to escape here.
	(TipOfDay.escape): Escape here, to allow for gettext lookup. 
	(TipOfDay.next_tip_cb): Escape prior to gettext lookup.

2006-10-25  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Update.

2006-10-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (parse_source_eference): Cap
	confidence value.